tests/ui/closures/closure-clone-requires-captured-clone.stderr
error[E0277]: the trait bound `NonClone: Clone` is not satisfied in `{closure@$DIR/closure-clone-requires-captured-clone.rs:13:19: 13:26}`
  --> $DIR/closure-clone-requires-captured-clone.rs:17:13
   |
LL |     let closure = move || {
   |                   ------- within this `{closure@$DIR/closure-clone-requires-captured-clone.rs:13:19: 13:26}`
...
LL |     closure.clone();
   |             ^^^^^ within `{closure@$DIR/closure-clone-requires-captured-clone.rs:13:19: 13:26}`, the trait `Clone` is not implemented for `NonClone`
   |
note: required because it's used within this closure
  --> $DIR/closure-clone-requires-captured-clone.rs:13:19
   |
LL |     let closure = move || {
   |                   ^^^^^^^
help: consider annotating `NonClone` with `#[derive(Clone)]`
   |
LL + #[derive(Clone)]
LL | struct NonClone(i32);
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
